[package]
name = "uwatch"
version = "0.1.0"
authors = ["e-tho"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/e-tho/uwatch"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "4", features = ["tokio"] }
zvariant = "4"
tokio-stream = "0.1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
